--- a/custom.css
+++ b/custom.css
@@ -3,7 +3,8 @@ body {
 }
 
 .card {
-    width: 10em;
+    width: 9em;
+    text-align: center;
     border: 1px solid black;
     padding: 0.3em;
     margin: 1em;
